# src/app/api/model/topic-creation-enum.ts
@@ -1,0 +1,23 @@
+/**
+ * Training Manager API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+/**
+ * * `owner` - Owner only * `coaches` - Owner and coaches * `members` - Everyone (incl. athletes)
+ */
+export enum TopicCreationEnum {
+
+    Owner = 'owner',
+
+    Coaches = 'coaches',
+
+    Members = 'members'
+}
+
